# ChangeLog for dev-perl/XML-RegExp
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RegExp/ChangeLog,v 1.21 2007/01/19 17:41:32 mcummings Exp $

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  XML-RegExp-0.03-r1.ebuild:
  Ebuild maintenance

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  XML-RegExp-0.03-r1.ebuild:
  Adding perl dep; fixed DEPEND

  05 Jul 2006; Christian Hartmann <ian@gentoo.org>
  XML-RegExp-0.03-r1.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed DEPEND

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  XML-RegExp-0.03-r1.ebuild:
  Stable on hppa

  18 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org>
  XML-RegExp-0.03-r1.ebuild:
  Unstable on hppa.

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  XML-RegExp-0.03-r1.ebuild:
  Add ~x86-fbsd keyword.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> XML-RegExp-0.03-r1.ebuild:
  Mark 0.03-r1 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> XML-RegExp-0.03-r1.ebuild:
  add ~ia64

  18 May 2005; Markus Rothe <corsair@gentoo.org> XML-RegExp-0.03-r1.ebuild:
  Stable on ppc64

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -XML-RegExp-0.03.ebuild, XML-RegExp-0.03-r1.ebuild:
  Cleaning for mirror

  09 Mar 2005; Markus Rothe <corsair@gentoo.org> XML-RegExp-0.03-r1.ebuild:
  Added ~ppc64 to KEYWORDS

*XML-RegExp-0.03-r1 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations

*XML-RegExp-0.03 (03 Jul 2002)

  1 Aug 2002; Calum Selkirk <cselkirk@gentoo.org> XML-RegExp-0.03.ebuild :

  Added ppc to KEYWORDS.

  03 Jul 2002; Seemant Kulleen <seemant@gentoo.org> XML-RegExp-0.03.ebuild
  files/digest-XML-RegExp-0.03 :
