@@ -1,18 +1,17 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RegExp/XML-RegExp-0.03-r1.ebuild,v 1.18 2007/01/19 17:41:32 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RegExp/XML-RegExp-0.03-r1.ebuild,v 1.19 2008/05/21 18:19:03 tove Exp $
 
 EAPI="prefix"
 
+MODULE_AUTHOR=TJMATHER
 inherit perl-module
 
-DESCRIPTION="A Perl module which contains contains regular expressions for the following XML tokens: BaseChar, Ideographic, Letter, Digit, Extender, CombiningChar, NameChar, EntityRef, CharRef, Reference, Name, NmToken, and AttValue."
-SRC_URI="mirror://cpan/authors/id/T/TJ/TJMATHER/${P}.tar.gz"
-HOMEPAGE="http://searchcpan.org/~tjmather/"
+DESCRIPTION="Regular expressions for XML tokens"
 
 SLOT="0"
 LICENSE="Artistic"
-KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
 IUSE=""
 
 SRC_TEST="do"
