@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-RegExp
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RegExp/ChangeLog,v 1.21 2007/01/19 17:41:32 mcummings Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RegExp/ChangeLog,v 1.22 2008/05/21 18:19:03 tove Exp $
+
+  21 May 2008; Torsten Veller <tove@gentoo.org> metadata.xml,
+  XML-RegExp-0.03-r1.ebuild:
+  Update HOMEPAGE (#203637), shorten DESCRIPTION, update metadata
 
   19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   XML-RegExp-0.03-r1.ebuild:
